--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,73 @@
-input{
+body{
+    background-color:pink;
+}
+.container {
+    
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    border:4px solid black;
     width:50%;
+    margin-left: 400px;
+    margin-top: 100px;
+    background-color: whitesmoke;
+
+    
+}
+
+h1 {
+    
+    margin-bottom: 20px;
+    text-decoration: underline;
+}
+
+input {
+    width: 200px;
     padding: 10px;
-    margin: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
-button{
-    background-color: rgb(12, 12, 182);
-    color: whitesmoke;
-    width: 15%;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 10px;
+
+button {
+    padding: 10px 15px;
+    border: none;
+    background-color: rgb(17, 17, 169);
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
 }
-h2{
-    margin: 20px;
-    color: rgb(12, 12, 182);
+
+button:hover {
+    background-color: rgb(89, 89, 212);
 }
-ul{
+
+ul {
     list-style-type: none;
+    padding: 0;
 }
-li{
-    border: 4px;
+
+li {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid #ccc;
+    margin-top: 10px;
+    border-radius: 4px;
+    width: 60%;
+    margin-left: 150px;
+   
 }
+
+li button {
+    background-color:rgb(17, 17, 169);
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+li button:hover {
+    background-color:  rgb(89, 89, 212);
+}
+
